--- a/src/userpage.html
+++ b/src/userpage.html
@@ -14,95 +14,97 @@
     referrerpolicy="no-referrer"
   />
   <style>
-.ticket-container {
-  width: 310px;
-  height: 50px;
-  background: #f9f9f9;
-  position: relative;
-  /* margin: 40px auto;  */
-  /* border-radius: 6px; */
+    .ticket-container {
+      width: 310px;
+      height: 50px;
+      position: relative;
+      background-color: white;
+      /* margin: 40px auto;  */
+      /* border-radius: 6px; */
+      overflow: hidden;
+    }
+
+    /* Semi-circle cutouts on left and right */
+    .cutout {
+      width: 40px;
+      height: 40px;
+      background: #cbe0fd;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 2;
+    }
+
+    .left {
+      left: -20px;
+    }
+
+    .right {
+      right: -20px;
+    }
+
+    /* Center dashed line */
+    .dashed-line {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      border-top: 2px dashed #ccc;
+      transform: translateY(-1px);
+      z-index: 1;
+    }
+
+    .main_container {
+      width: 330px;
+      height: 200px;
+      border: 2px solide red;
+    }
+
+    .container {
+      width: 330px;
+      height: 200px;
+      /* background: #eee; */
+      border-radius: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
+    }
+
+
+    .circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  animation: pulse 1.8s ease-in-out infinite;
+  transition: transform 0.4s ease;
   overflow: hidden;
 }
 
-/* Semi-circle cutouts on left and right */
-.cutout {
-  width: 40px;
-  height: 40px;
-  background: #cbe0fd; 
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 2;
-}
 
-.left {
-  left: -20px;
-}
+    .circle img{
+        width: 120px;
+        height: 120px;
+    }
 
-.right {
-  right: -20px;
-}
-
-/* Center dashed line */
-.dashed-line {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  border-top: 2px dashed #ccc;
-  transform: translateY(-1px);
-  z-index: 1;
-}
-
-     .main_container{
-         width: 330px;
-        height: 200px;
-        border: 2px solide   red; 
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        opacity: 1;
       }
-
-      .container {
-        width: 330px;
-        height: 200px;
-        /* background: #eee; */
-        border-radius: 12px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
+      50% {
+        transform: scale(1.8);
+        opacity: 1;
       }
-
-      .circle {
-        width: 100px;
-        height: 100px;
-        /* background-color: #ff6f61; */
-        border-radius: 50%;
-        animation: pulse 2.5s ease-in-out infinite;
-        transition: all  ease;
-
-        img{
-        width: 100px;
-        height: 100px;
-        }
+      100% {
+        transform: scale(1);
+        opacity: 1;
       }
-
-      @keyframes pulse {
-        0% {
-          transform: scale(1);
-          opacity: 1;
-        }
-        50% {
-          transform: scale(1.8);
-          opacity: 1;
-        }
-        100% {
-          transform: scale(1);
-          opacity: 1;
-        }
-      }
+    }
   </style>
   <body class="bg-[#cbe0fd] flex justify-center items-center">
-    <div class="w-[330px] h-[100vh]  px-[10px] py-[15px]">
+    <div class="w-[330px] h-[100vh] px-[10px] py-[15px]">
       <div class="w-[100%] flex justify-between items-center text-[16px]">
         <div class="font-bold text-[18px]"><i class="ri-close-line"></i></div>
         <div class=""><u>All Passes</u></div>
@@ -124,7 +126,7 @@
               <div class="font-bold" id="usname"></div>
             </div>
             <div class="">
-              <div class="text-[#4d545e]">Fare</div>
+              <div class="text-[#4d545e] pr-[60px]">Fare</div>
               <div class="font-bold">&#x20B9; 25</div>
             </div>
           </div>
@@ -146,19 +148,23 @@
           >
             <div class="">
               <div class="text-[#4d545e] text-[14px]">Booking Time</div>
-              <div class="font-bold text-[11px]"><span id="timetoday"></span> | <span id="bookti"></span></div>
+              <div class="font-bold text-[11px]">
+                <span id="timetoday"></span> | <span id="bookti"></span>
+              </div>
             </div>
 
             <div class="">
               <div class="text-[#4d545e] text-[14px]">Validity Time</div>
-              <div class="font-bold text-[11px]"><span id="timetoday1"></span> | 11 : 59 PM</div>
+              <div class="font-bold text-[11px]">
+                <span id="timetoday1"></span> | 11 : 59 PM
+              </div>
             </div>
           </div>
 
           <div
             class="w-[100%] text-[17px] flex justify-center items-center py-[5px] bg-white text-[#4d545e] font-semibold"
           >
-            25070706457AC1SZ
+            25070<span id="u1">2847</span>AC1 <span id="u2">SW</span>
           </div>
 
           <div class="bg-red-600 text-white text-center py-[1px]">
@@ -167,16 +173,20 @@
         </div>
 
         <div class="w-[100%] h-[200px] bg-white">
-               <div class="main_container">
-        <div class="container">
-            <div class="circle flex justify-center items-center" ><img src="./photo/RMTS_LOgo.webp" alt=""></div>
-        </div>
-    </div>
+          <div class="main_container">
+            <div class="container">
+              <div class="circle flex justify-center items-center">
+                <img src="./photo/RMTS_LOgo.webp" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="w-[100%] h-[30px]  flex justify-center items-center rounded-[0px_0px_15px_15px] text-[#4d545e] bg-[#f4ecec71] font-semibold">
-        Expires in  &nbsp;<span id="time"> 03:06:32 </span>
-       </div>
+      <div
+        class="w-[100%] h-[30px] flex justify-center items-center rounded-[0px_0px_15px_15px] text-[#4d545e] bg-[#f4ecec71] font-semibold"
+      >
+        Expires in &nbsp;<span id="time"> 03:06:32 </span>
+      </div>
     </div>
   </body>
   <script>
@@ -184,60 +194,109 @@
     const countMin = 60;
     const countSec = 60;
 
-    let time=document.getElementById("time");
+    const random1 = Math.floor(100000 + Math.random() * 900000);
+    console.log(random1);
+    let u1 = document.getElementById("u1");
+    u1.innerHTML = random1;
+
+    let array = [
+      "A",
+      "B",
+      "C",
+      "D",
+      "E",
+      "F",
+      "G",
+      "H",
+      "I",
+      "J",
+      "K",
+      "L",
+      "M",
+      "N",
+      "O",
+      "P",
+      "Q",
+      "R",
+      "S",
+      "T",
+      "U",
+      "V",
+      "W",
+      "X",
+      "Y",
+      "Z",
+    ];
+
+    const number1= Math.floor(Math.random() * 26);
+    const number2= Math.floor(Math.random() * 26);
+
+    const unique_alph=array[number1]+array[number2];
+    const u2=document.getElementById("u2")
+    u2.innerHTML=unique_alph;
+
+
+    let time = document.getElementById("time");
 
     setInterval(() => {
       const Date1 = new Date();
       const currentHours = Date1.getHours();
       const currentMinutes = Date1.getMinutes();
       const currentSec = Date1.getSeconds();
-        
-    //   newcurrentHours=currentHours >12 ? currentHours-12 : currentHours  
 
-       time.innerHTML= `${countTime - currentHours - 1} : ${countMin - currentMinutes - 1} : ${countSec - currentSec - 1}`
-      ;
+      //   newcurrentHours=currentHours >12 ? currentHours-12 : currentHours
+
+      const final_time1 =
+        countTime - currentHours - 1 <= 9
+          ? `0${countTime - currentHours - 1}`
+          : countTime - currentHours - 1;
+      const final_time2 =
+        countMin - currentMinutes - 1 <= 9
+          ? `0${countMin - currentMinutes - 1}`
+          : countMin - currentMinutes - 1;
+      const final_time3 =
+        countSec - currentSec - 1 <= 9
+          ? `0${countSec - currentSec - 1}`
+          : countSec - currentSec - 1;
+
+      time.innerHTML = ` ${final_time1} : ${final_time2} : ${final_time3}`;
     }, 1000);
 
-    let timetoday=document.getElementById("timetoday");
-    let timetoday1=document.getElementById("timetoday1");
-    
-    let date2=new Date();
-    let arr=date2.toDateString().split(" ")
-    console.log(arr)
+    let timetoday = document.getElementById("timetoday");
+    let timetoday1 = document.getElementById("timetoday1");
 
-    timetoday.innerHTML=`${arr[2]} ${arr[1]}, ${arr[3].slice(2)}`;
-    timetoday1.innerHTML=`${arr[2]} ${arr[1]}, ${arr[3].slice(2)}`;
+    let date2 = new Date();
+    let arr = date2.toDateString().split(" ");
+    console.log(arr);
 
+    timetoday.innerHTML = `${arr[2]} ${arr[1]}, ${arr[3].slice(2)}`;
+    timetoday1.innerHTML = `${arr[2]} ${arr[1]}, ${arr[3].slice(2)}`;
 
-    console.log(date2.get)
-    console.log(date2.getMinutes())
+    console.log(date2.get);
+    console.log(date2.getMinutes());
 
-let date3 = new Date();
-let hours = date3.getHours(); 
-let minutes = date3.getMinutes();
+    let date3 = new Date();
+    let hours = date3.getHours();
+    let minutes = date3.getMinutes();
 
-let period = hours >= 12 ? "PM" : "AM";
-hours = hours % 12;
-hours = hours === 0 ? 12 : hours; 
-minutes = minutes < 10 ? "0" + minutes : minutes;
-let currentTime = `${hours}:${minutes} ${period}`;
+    let period = hours >= 12 ? "PM" : "AM";
+    hours = hours % 12;
+    hours = hours === 0 ? 12 : hours;
+    minutes = minutes < 10 ? "0" + minutes : minutes;
+    let currentTime = `${hours}:${minutes} ${period}`;
 
-let bookti=document.getElementById("bookti");
+    let bookti = document.getElementById("bookti");
 
-bookti.innerHTML=currentTime;
+    bookti.innerHTML = currentTime;
 
-
- function getQueryParam(param) {
+    function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
     }
 
     const userName = getQueryParam("name");
 
-     const usname=document.getElementById("usname");
-
-     usname.innerHTML=userName;
-
+    const usname = document.getElementById("usname");
+    usname.innerHTML = userName.toUpperCase();
   </script>
-
 </html>
